donation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: solidarytech
  labels:
    app: donation-service
spec:
  type: ClusterIP
  selector:
    app: donation-service
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
